# OpenCVVideo

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/opencv_video/: README.md  __init__.py  codec.py  extension.py
src/opencv_video/reader/: README.md  __init__.py
src/opencv_video/writer/: README.md  __init__.py  core.py  parameter.py
tests/: test.py
